    trigger it afterwards (LP: #759804).
  * Make the 'name already exists on the network' warning message not
    block the user from moving forward (LP: #760884).
  * Briefly shut down the debconf database to flush any changes before
    starting the parallel database (LP: #761094).
  * Fix removal of slideshow packages for non-GTK frontends
    (LP: #745607).

  [ Mario Limonciello ]
  * Show the oem-config slideshow in oem-config rather than the ubuntu one.
  * Uninstall the oem-config slideshow after install is done (LP: #759935).

  [ Julien Lavergne ]
  * Disable ubiquity panel for openbox session. 

  [ Mackenzie Morgan ]
  * Make radio buttons use label wording for screen reader (LP: #749653)

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 13 Apr 2011 10:08:02 +0100

ubiquity (2.6.5) natty; urgency=low

  * Fix broken home directory lookup (LP: #759401).

 -- Evan Dandrea <ev@ubuntu.com>  Wed, 13 Apr 2011 09:17:48 +0100

ubiquity (2.6.4) natty; urgency=low

  * Don't check for debconf database locks when ubiquity is itself running
    inside a debconf frontend (LP: #758858).

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 12 Apr 2011 21:25:47 +0100

ubiquity (2.6.3) natty; urgency=low

  * Clean up after the langpacks state on multiple runs of the installer.
  * Prefer biggest_free over resize always now that we make sure the
    biggest_free choice offers at least 5GB (LP: #758236, LP: #652852).
  * Determine the home directory of the target user when copying the
    network configuration (LP: 745607).
  * Select all the ubiquity slideshow packages for removal, and do not
    error out if none can be found (LP: #745607).
  * Update translations from Launchpad.
  * Automatic update of included source packages: console-setup
    1.57ubuntu18, migration-assistant 0.6.10.

 -- Evan Dandrea <ev@ubuntu.com>  Tue, 12 Apr 2011 18:29:53 +0100

ubiquity (2.6.2) natty; urgency=low

  [ Colin Watson ]
  * Handle keyboard layouts with only one variant (LP: #711926).